--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">TestApp</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Bitte Anmelden</string>
     <string name="action_settings">Settings</string>
+    <string name="goToSection2">Login</string>
+    <string name="uname_variable" />
 </resources>
