--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="goToSection2">Login</string>
     <string name="uname_variable" />
+    <string name="testButton2Blacky">das ist ein test button</string>
 </resources>
