erste richtige session 25.05.2015

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="goToSection2">Login</string>
     <string name="uname_variable" />
     <string name="testButton2Blacky">das ist ein test button</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="editTextUsernameString" />
 </resources>
