--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">TestApp</string>
 
-    <string name="hello_world">Bitte Anmelden</string>
+    <string name="hello_world">Bitte melden Sie sich an... </string>
     <string name="action_settings">Settings</string>
     <string name="goToSection2">Login</string>
     <string name="uname_variable" />
