--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,13 @@
     <string name="hello_world">Bitte melden Sie sich an... </string>
     <string name="action_settings">Settings</string>
     <string name="goToSection2">Login</string>
-    <string name="uname_variable" />
-    <string name="testButton2Blacky">das ist ein test button</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="editTextUsernameString" />
+    <string name="motorcycle" > Motorcycle from DB </string>
+    <string name="dateOfRegistration">registration date from DB</string>
+    <string name="upcomingEvents">Next upcoming events:</string>
+    <string name="title_activity_to_do">ToDo</string>
+    <string name="title_activity_value_analysis">ValueAnalysisActivity</string>
+    <string name="title_activity_history">HistoryActivity</string>
 </resources>
